package ci.minesstienne.fr.cnformalisation.abstractmodel.relaxed;

/**
 * @author YoucTagh
 */
public enum ConstraintType {
    hard, soft
}
